# DSP00

./: README.md
k01/: CMakeLists.txt  Feature3.hpp  FrequencyFeature3.hpp  JNI.cpp  K01.cpp  build-and-run.sh  build-for-android-arm64-v8a.sh
k02/: CMakeLists.txt  Entry.cpp
k03/: CMakeLists.txt  Entry.cpp  README.md  build-for-ubuntu-1604-x86_64.sh
